<resources>
    <string name="app_name">Guila Delivery</string>
    <string name="imagem_do_produto">Imagem do produto</string>
    <string name="cadastro_de_produto">Cadastro de produto</string>
    <string name="nome">Nome</string>
    <string name="preco">Preço</string>
    <string name="url">Endereço URL</string>
    <string name="remover">Remover</string>
    <string name="botao_adicionar_produto">Botão adicionar produto</string>
    <string name="sair">Sair</string>
    <string name="salvar">Salvar</string>
    <string name="Email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="deletar">Deletar</string>
    <string name="colocar_no_carrinho">Colocar no carrinho</string>
    <string name="total">Total</string>
    <string name="mais">+</string>
    <string name="menos">-</string>
    <string name="continuar_comprando">Continuar comprando</string>
    <string name="ir_para_pagamento">Ir para pagamento</string>
    <string name="x">x</string>
    <string name="endereco">Rua, avenida, travessa, etc</string>
    <string name="dinheiro">Dinheiro</string>
    <string name="pix">Pix</string>
    <string name="cartao_de_debito">Cartão de débito</string>
    <string name="cartao_de_credito">Cartão de crédito</string>
    <string name="editar">Editar</string>
    <string name="tipo_de_pagamento">Tipo de pagamento</string>
    <string name="finalizar_pedido">Finalizar pedido</string>
    <string name="inicio">Início</string>
    <string name="perfil">Meus dados</string>
    <string name="pedidos">Pedidos</string>
    <string name="carrinho">Carrinho</string>
    <string name="carrinho_vazio">Seu carrinho está vazio</string>
    <string name="linha_divisoria">linha divisoria</string>
    <string name="botao_inicial_cerveja">Cerveja</string>
    <string name="botao_inicial_sem_alcool">Sem álcool</string>
    <string name="botao_inicial_destilado">Destilado</string>
    <string name="botao_inicial_petiscos">Petiscos</string>
    <string name="botao_inicial_diversos">Diversos</string>
    <string name="endereco_completo">%1$s, %2$s - %3$s\n%4$s\n%5$s\n%6$s</string>
    <string name="nova_senha">Nova senha</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="alterar_senha">Alterar senha</string>
    <string name="numero">Nº</string>
    <string name="complemento">Complemento</string>
    <string name="bairro">Bairro</string>
    <string name="telefone">Telefone</string>
    <string name="referencia">Referência</string>
    <string name="pedido_minimo">Pedido mínimo</string>
    <string name="taxa_de_entrega">Taxa de entrega</string>
    <string name="ativar_desativar_app">Ativar/Desativar App</string>
    <string name="aguarde">Aguarde…</string>
    <string name="dash">#</string>
    <string name="recebido">Recebido</string>
    <string name="enviado">Enviado</string>
    <string name="entregue">Entregue</string>
    <string name="subtotal">Subtotal:</string>
    <string name="entrega">Entrega:</string>
    <string name="cliente">Cliente</string>
    <string name="detalhes">Detalhes</string>
    <string name="estoque">Estoque</string>
    <string name="categoria">Categoria</string>
    <string name="em_aberto">Em aberto</string>
    <string name="finalizado">Finalizado</string>
    <string name="nao_ha_pedidos_em_aberto">Não há pedidos em aberto</string>
    <string name="aberto">Aberto</string>
    <string name="fechado">Fechado</string>
    <string name="botao_fale_conosco">Botão fale conosco</string>
    <string name="logo">logo</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="sugestao_critica_elogio">Deixe sua sugestão, crítica ou elogio</string>
    <string name="caracter_maximo">120</string>
    <string name="restantes">caracteres restantes</string>
    <string name="enviar">Enviar</string>
    <string name="imagem_erro_conexao">Imagem erro conexão</string>
    <string name="offline">Ops… você está off-line</string>
    <string name="tente_novamente">Tente novamente</string>
    <string name="digite_seu_email">Digite seu email</string>
    <string name="guila_delivery">Guila delivery</string>
    <string name="configuracoes">Configurações</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="mensagens">Mensagens</string>
    <string name="botao_carrinho">Botão carrinho</string>
    <string name="endereco_de_entrega">Endereço de entrega</string>

</resources>