<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_administrador_configuracoes"
        android:title="@string/configuracoes"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_administrador_pedidos"
        android:title="@string/pedidos"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/menu_administrador_mensagens"
        android:title="@string/mensagens"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/menu_administrador_estoqueZero"
        android:title="Estoque zero"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/menu_administrador_relatorio_vendas"
        android:title="Relatório de vendas"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/menu_administrador_relatorio_estoque"
        android:title="Relatório de estoque"
        app:showAsAction="never"
        />


</menu>