<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mensagem_descricao"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sugestao_critica_elogio"
                    android:textSize="18sp"
                    android:maxLength="@string/caracter_maximo"
                    android:inputType="text"
                    android:backgroundTint="@android:color/white"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/mensagem_caracteres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/mensagem_descricao"
                app:layout_constraintStart_toStartOf="@id/mensagem_descricao"
                android:text="@string/caracter_maximo"/>

            <TextView
                android:id="@+id/mensagem_caracteres_restantes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                app:layout_constraintTop_toTopOf="@id/mensagem_caracteres"
                app:layout_constraintBottom_toBottomOf="@id/mensagem_caracteres"
                app:layout_constraintStart_toEndOf="@id/mensagem_caracteres"
                android:text="@string/restantes"/>

            <Button
                android:id="@+id/mensagem_botao_enviar"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/formato_botao_acao"
                android:text="@string/enviar"
                app:layout_constraintEnd_toEndOf="@id/mensagem_descricao"
                app:layout_constraintStart_toStartOf="@id/mensagem_descricao"
                app:layout_constraintTop_toBottomOf="@id/mensagem_caracteres" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    
</ScrollView>
