<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/pagina_erro_conexao_imagem"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/imagem_erro_conexao"
            android:src="@drawable/sem_conexao"
            android:layout_marginTop="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pagina_erro_conexao_mensagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="24sp"
            android:text="@string/offline"
            app:layout_constraintTop_toBottomOf="@id/pagina_erro_conexao_imagem"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/pagina_erro_conexao_imagem_botao"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:text="@string/tente_novamente"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/formato_botao_acao"
            app:layout_constraintCircleRadius="@android:dimen/notification_large_icon_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>