<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/formulario_produto_nome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/formulario_produto_edit_text_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome"
            android:inputType="textCapWords"
            android:backgroundTint="@android:color/white"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/formulario_produto_preco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@id/formulario_produto_nome"
        app:layout_constraintStart_toStartOf="@id/formulario_produto_nome"
        app:layout_constraintTop_toBottomOf="@id/formulario_produto_nome">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/formulario_produto_edit_text_preco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/preco"
            android:inputType="numberDecimal"
            android:backgroundTint="@android:color/white"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/formulario_produto_imagem_url"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@id/formulario_produto_preco"
        app:layout_constraintStart_toStartOf="@id/formulario_produto_preco"
        app:layout_constraintTop_toBottomOf="@id/formulario_produto_preco">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/formulario_produto_edit_text_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/url"
            android:inputType="textUri"
            android:backgroundTint="@android:color/white"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/formulario_produto_estoque"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@id/formulario_produto_imagem_url"
        app:layout_constraintStart_toStartOf="@id/formulario_produto_imagem_url"
        app:layout_constraintTop_toBottomOf="@id/formulario_produto_imagem_url">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/formulario_produto_edit_text_estoque"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/estoque"
            android:inputType="number"
            android:backgroundTint="@android:color/white"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/formulario_produto_categoria_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/formulario_produto_estoque"
        app:layout_constraintTop_toBottomOf="@id/formulario_produto_estoque"
        android:text="@string/categoria"/>
    
    <Spinner
        android:id="@+id/formulario_produto_categoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/formulario_produto_estoque"
        app:layout_constraintTop_toBottomOf="@id/formulario_produto_categoria_titulo"
        />

    <Button
        android:id="@+id/formulario_produto_botao_salvar"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:text="@string/salvar"
        android:background="@drawable/formato_botao_acao"
        app:layout_constraintTop_toBottomOf="@id/formulario_produto_categoria"
        app:layout_constraintStart_toStartOf="@id/formulario_produto_estoque"
        app:layout_constraintEnd_toEndOf="@id/formulario_produto_estoque" />

</androidx.constraintlayout.widget.ConstraintLayout>