<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/item_carrinho_imagem"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/imagem_do_produto"/>

    <TextView
        android:id="@+id/item_carrinho_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Alface crespa"
        android:layout_margin="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_carrinho_imagem" />

    <TextView
        android:id="@+id/item_carrinho_preco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/item_carrinho_nome"
        app:layout_constraintStart_toStartOf="@id/item_carrinho_nome"
        app:layout_constraintTop_toBottomOf="@id/item_carrinho_nome"
        tools:text="10,00" />

    <Button
        android:id="@+id/item_carrinho_botao_subtracao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menos"
        android:layout_margin="20dp"
        android:background="@drawable/formato_botao_acao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_carrinho_preco" />

    <Button
        android:id="@+id/item_carrinho_botao_adicao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mais"
        android:layout_margin="20dp"
        android:background="@drawable/formato_botao_acao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_carrinho_preco" />

    <TextView
        android:id="@+id/item_carrinho_quantidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/item_carrinho_botao_adicao"
        app:layout_constraintStart_toEndOf="@+id/item_carrinho_botao_subtracao"
        app:layout_constraintTop_toTopOf="@id/item_carrinho_botao_subtracao"
        tools:text="1"/>

    <TextView
        android:id="@+id/item_carrinho_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/item_carrinho_botao_subtracao"
        app:layout_constraintStart_toStartOf="@id/item_carrinho_botao_subtracao"
        />

    <TextView
        android:id="@+id/item_carrinho_preco_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="R$ 20,00"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/item_carrinho_botao_adicao"
        app:layout_constraintEnd_toEndOf="@id/item_carrinho_botao_adicao" />

    <Button
        android:id="@+id/item_carrinho_botao_continuar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/colocar_no_carrinho"
        android:background="@drawable/formato_botao_acao"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>